# vvpipo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  osm_tool.cpp  osm_tool.hpp  osm_tool_closed_way_filter.cpp  osm_tool_closed_way_tags.cpp  osm_tool_complex_areas.cpp  osm_tool_failed_area_tags.cpp  osm_tool_large_areas.cpp  osm_tool_mercator.cpp  osm_tool_stats.cpp
